attemped debugging and slight CSS changes

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 }
 
 .inner {
-  font-family: 'Monoton', cursive;
+  font-family: 'Little Days', cursive;
   font-size: 90px;
   height: 100px;
   width: 80%;
